Add wrangler config, deps, and nodejs_compat; ready for deploy

--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,4 @@
-﻿# Cloudflare Workers / JS
-node_modules/
-.wrangler/
-dist/
-build/
-.cache/
-*.log
-npm-debug.log*
-
-# Local env files (keep an example, ignore real secrets)
+﻿node_modules
+.wrangler
+dist
 .env
-.env.*
-!.env.example
-
-# Editor / OS junk
-.DS_Store
-Thumbs.db
-.idea/
-.vscode/
-
-# Misc
-*.local
